# Comfyui_JC2

./: JC2.py  JCBO.py  README.md  __init__.py  extra_option.json  pyproject.toml  requirements.txt  安装liger-kernel.bat
example/: JoyCaption Beta_One_example.json
