[project]
name = "comfyui_jc2"
description = "Wrapped Joy Caption alpha 2 node for comfyui: Easy use, for GPU with less 19G, please use nf4 for better balanced speed and result. "
version = "1.0.8"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub>=0.23.4,<=0.25", "accelerate", "transformers>=4.43.2,<=4.45.1", "sentencepiece", "peft==0.12.0", "bitsandbytes"]

[project.urls]
Repository = "https://github.com/TTPlanetPig/Comfyui_JC2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ttplanet"
DisplayName = "Comfyui_JC2"
Icon = "ðŸª"
